compiler/typ/tests/fixtures/diagnostics/0969_mli_unary_type_overapplied_03.mli.infer.expected
File "0969_mli_unary_type_overapplied_03.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0969_mli_unary_type_overapplied_03 is not a valid module name.

File "0969_mli_unary_type_overapplied_03.mli", line 2, characters 14-36:
2 | val x_gamma : (int, bool) wrap_gamma
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor wrap_gamma expects 1 argument(s),
       but is here applied to 2 argument(s)
